# CtxBandit

./: .gitignore  README.md  pyproject.toml
examples/: 1-example-single.ipynb  2-example-joint.ipynb  3-example-difference.ipynb
experiments/: Snakefile
experiments/difference/: inference_difference.py
experiments/joint/: inference_joint.py
experiments/single/: inference_single.py
experiments/slurm_profile/: config.v9+.yaml
experiments/viz/: viz_joint_diff.py
src/ctxbandit/: __init__.py  policy_inference.py  policy_inference_difference.py  policy_inference_joint.py  policy_inference_mixins.py  policy_inference_single.py  utils.py
