[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxbandit"
version = "0.1.0"
description = "Simulation Tools for Bayesian Inference of Contextual Bandit Policies via Empirical Likelihood"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "J. Ouyang", email = "ouyang@outlook.com.au" }
]
dependencies = [
  "numpy>=2.0",
  "scipy>=1.14.0",
  "cvxpy>=1.7",
  "ecos>=2.0.14",
  "statsmodels>=0.14.2",

  # Optional: for Slurm workflow management
  "snakemake==9.13.3",
  "snakemake-executor-plugin-slurm==1.8.0",

  # Optional: for post-simulation analysis and visualization
  "jupyterlab>=4.4.10",
  "nbstripout>=0.8.1",
  "pandas>=2.3",
  "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
  "pytest", 
]             

[tool.setuptools.packages.find]
where = ["src"]                          # Look for packages inside src/
